spacing fix

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,6 +2,10 @@
     border-radius: 50%;
 }
 
+h2 { 
+    padding-bottom: 0.5em;
+}
+
 #title a {
     text-decoration: none !important;; /* Removes the underline */
     border: none;
